--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.2",
-    "knex": "^0.14.2",
+    "knex": "^0.16.3",
+    "morgan": "^1.9.1",
     "pg": "^7.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.7"
+    "nodemon": "^1.18.9"
   },
   "description": ""
 }
