--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.4.0",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
-    "pg": "^7.4.0"
+    "pg": "^7.4.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
